# halley-samples

./: .gitattributes  .gitignore  CMakeLists.txt
samples/: CMakeLists.txt
samples/empty/: CMakeLists.txt
samples/empty/assets_src/config/: game_world.yaml
samples/empty/gen_src/: empty.yaml
samples/empty/src/game/: game.cpp  game_stage.cpp  game_stage.h
samples/trapped/: CMakeLists.txt
samples/trapped/assets_src/animation/: ella.yaml  zombies.yaml
samples/trapped/assets_src/config/: trapped_game_world.yaml
samples/trapped/assets_src/spritesheet/: trapped_scenery.json  trapped_sprites.json
samples/trapped/gen_src/: trapped.yaml
samples/trapped/src/game/: game_stage.cpp  game_stage.h  trapped_game.cpp
samples/trapped/src/systems/: bullet_system.cpp  check_collision_system.cpp  check_dynamic_collision_system.cpp  check_static_collision_system.cpp  damage_system.cpp  destroy_on_impact_system.cpp  enemy_death_system.cpp  enemy_spawning_system.cpp  flashing_system.cpp  integrate_velocity_system.cpp  mob_system.cpp  movement_system.cpp  player_input_system.cpp  player_seeking_system.cpp  repulsion_system.cpp  shooter_system.cpp  sprite_animation_system.cpp  sprite_render_system.cpp  ttl_system.cpp
